--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,9 @@ jobs:
           fi
 
       - name: Prepare for test
-        if: "contains(steps.arch_check.outputs.check, 'passed')"
+        if: |
+          contains(steps.arch_check.outputs.check, 'passed') &&
+          contains(matrix.architecture, 'amd64')
         id: prep_test
         run: |
           version_json=$(cat ./VERSION.json)
@@ -175,7 +177,7 @@ jobs:
           source: ${{ steps.prep_test.outputs.url }}
           destination: screenshot.png
           width: 1920
-          full-page: true
+          height: 1080
 
   publish:
     runs-on: ubuntu-20.04
@@ -235,9 +237,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download screenshot
+        continue-on-error: true
         uses: actions/download-artifact@v3
         with:
-          name: screenshot
+          name: screenshotsssss
 
       - name: Send discord notification
         if: "!contains(github.event.head_commit.message, 'skip ci')"
