--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -240,7 +240,7 @@ jobs:
         continue-on-error: true
         uses: actions/download-artifact@v3
         with:
-          name: screenshotsssss
+          name: screenshot
 
       - name: Send discord notification
         if: "!contains(github.event.head_commit.message, 'skip ci')"
