--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -313,6 +313,7 @@ jobs:
           retry_on: error
           timeout_seconds: 20
           command: |
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
             VERSION=${{ needs.build.outputs.version }}
             BRANCH=${{ needs.build.outputs.branch }}
             TAGS="${GITHUB_REF//refs\/heads\//}${BRANCH},${GITHUB_REF//refs\/heads\//}${BRANCH}-${VERSION},${GITHUB_REF//refs\/heads\//}${BRANCH}-${GITHUB_SHA:0:7}"
