--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -308,14 +308,15 @@ jobs:
 
       - name: Update tags .json file
         uses: nick-fields/retry@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ needs.build.outputs.version }}
+          BRANCH: ${{ needs.build.outputs.branch }}
         with:
           max_attempts: 3
           retry_on: error
           timeout_seconds: 20
           command: |
-            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-            VERSION=${{ needs.build.outputs.version }}
-            BRANCH=${{ needs.build.outputs.branch }}
             TAGS="${GITHUB_REF//refs\/heads\//}${BRANCH},${GITHUB_REF//refs\/heads\//}${BRANCH}-${VERSION},${GITHUB_REF//refs\/heads\//}${BRANCH}-${GITHUB_SHA:0:7}"
             LAST_UPDATED=$(date -u +'%FT%T.%3NZ')
             git clone -b "master" "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" masterGit
