--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -321,7 +321,7 @@ jobs:
           command: |
             TAGS="${GITHUB_REF//refs\/heads\//}${BRANCH},${GITHUB_REF//refs\/heads\//}${BRANCH}-${VERSION},${GITHUB_REF//refs\/heads\//}${BRANCH}-${GITHUB_SHA:0:7}"
             LAST_UPDATED=$(date -u +'%FT%T.%3NZ')
-            git clone -b "master" "https://${GITHUB_OWNER}:${GITHUB_TOKEN}@github.com/${REPO}.git" masterGit
+            git clone -b "master" "https://${GITHUB_TOKEN}@github.com/${REPO}.git" masterGit
             cd "${GITHUB_WORKSPACE}/masterGit" || exit 1
             jq -n --arg last_updated "${LAST_UPDATED}" --arg tags "${TAGS}" '{ last_updated: $last_updated, tags: $tags | split(",") }' > tags-${GITHUB_REF//refs\/heads\//}.json
             git add .
