--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,6 +299,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [build, publish]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Git Config
         env:
           GITHUB_OWNER: ${{ github.repository_owner }}
