--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -311,20 +311,19 @@ jobs:
 
       - name: Update tags .json file
         uses: nick-fields/retry@v2
-        env:
-          GITHUB_OWNER: ${{ github.repository_owner }}
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          REPO: ${{ github.repository }}
-          VERSION: ${{ needs.build.outputs.version }}
-          BRANCH: ${{ needs.build.outputs.branch }}
         with:
           max_attempts: 3
           retry_on: error
           timeout_seconds: 20
           command: |
+            GITHUB_OWNER=${{ github.repository_owner }}
+            GITHUB_TOKEN=${{ secrets.PERSONAL_TOKEN }}
+            REPO=${{ github.repository }}
+            VERSION=${{ needs.build.outputs.version }}
+            BRANCH=${{ needs.build.outputs.branch }}
             TAGS="${GITHUB_REF//refs\/heads\//}${BRANCH},${GITHUB_REF//refs\/heads\//}${BRANCH}-${VERSION},${GITHUB_REF//refs\/heads\//}${BRANCH}-${GITHUB_SHA:0:7}"
             LAST_UPDATED=$(date -u +'%FT%T.%3NZ')
-            git clone -b "master" "https://${GITHUB_TOKEN}@github.com/${REPO}.git" masterGit
+            git clone -b "master" "https://${GITHUB_TOKEN}@github.com/${REPO}.git" ./masterGit
             cd "${GITHUB_WORKSPACE}/masterGit" || exit 1
             jq -n --arg last_updated "${LAST_UPDATED}" --arg tags "${TAGS}" '{ last_updated: $last_updated, tags: $tags | split(",") }' > tags-${GITHUB_REF//refs\/heads\//}.json
             git add .
