--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,9 +299,6 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [build, publish]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Git Config
         env:
           GITHUB_OWNER: ${{ github.repository_owner }}
@@ -311,16 +308,17 @@ jobs:
 
       - name: Update tags .json file
         uses: nick-fields/retry@v2
+        env:
+          GITHUB_OWNER: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          REPO: ${{ github.repository }}
+          VERSION: ${{ needs.build.outputs.version }}
+          BRANCH: ${{ needs.build.outputs.branch }}
         with:
           max_attempts: 3
           retry_on: error
           timeout_seconds: 20
           command: |
-            GITHUB_OWNER=${{ github.repository_owner }}
-            GITHUB_TOKEN=${{ secrets.PERSONAL_TOKEN }}
-            REPO=${{ github.repository }}
-            VERSION=${{ needs.build.outputs.version }}
-            BRANCH=${{ needs.build.outputs.branch }}
             TAGS="${GITHUB_REF//refs\/heads\//}${BRANCH},${GITHUB_REF//refs\/heads\//}${BRANCH}-${VERSION},${GITHUB_REF//refs\/heads\//}${BRANCH}-${GITHUB_SHA:0:7}"
             LAST_UPDATED=$(date -u +'%FT%T.%3NZ')
             git clone -b "master" "https://${GITHUB_TOKEN}@github.com/${REPO}.git" ./masterGit
